Fixed long issue titles wrapping to next line in the Issue details dialog (#5249)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -14,8 +14,6 @@
 
     .title {
       display: block;
-      white-space: nowrap;
-      float: left;
       font-size: 24px;
       max-width: 100%;
       line-height: 30px;
