--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-list-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-list-dialog.less
@@ -2,6 +2,10 @@
 
   height: 430px;
 
+  .dialog-content {
+    margin-top: -10px;
+  }
+
   .docked-panel {
     width: auto;
     box-shadow: none;
